--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/webpack": "^5.28.0",
-    "autoprefixer": "^10.4.13",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
@@ -22,6 +21,7 @@
     "pinia": "^2.0.23",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
     "sass": "^1.56.0",
     "sass-loader": "^13.1.0",
     "ts-loader": "^9.4.1",
